# fastapi_project

./: pyproject.toml
scr/: main.py
scr/auth/: dependencies.py  models.py  routers.py  schemas.py  services.py
scr/common/: base_model.py  enums.py
scr/content/: models.py  schemas.py
scr/database/: db.py
scr/event/: models.py  schemas.py
scr/group/: models.py  schemas.py
scr/media/: models.py  schemas.py
scr/personal/: models.py  schemas.py
scr/profile/: models.py  schemas.py
scr/tag/: models.py  schemas.py
scr/user/: models.py  routers.py  schemas.py  services.py
